--- a/galaxy.yml
+++ b/galaxy.yml
@@ -6,3 +6,8 @@ authors:
   - Benoit Ferre <benoit@example.com>
 license: MIT
 description: Ansible collection for Huawei iMaster NCE-Campus (tenant view). Token auth, Sites & Devices, lookup & inventory.
+
+
+build_ignore:
+  - tools/**
+  - bundle.txt
